--- a/pokemondatatable.html
+++ b/pokemondatatable.html
@@ -1,21 +1,35 @@
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Pokemon Chart</title>
+</head>
+<body>
+	<h1>First Gen Pokemon Chart</h1>
+
 <table border = "1">
-</thead>
+<thead>
+	<tr>
 	<th>Image</th>
 	<th>Name</th>
 	<th>Type</th>
-	<th>Evolves Into</th><
+	<th>Evolves Into</th>
+	</tr>
+
 </thead>
-
 <tbody>
-	
-	<td> <img src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png"> <td>
-	Bulbasaur
-	<td>Grass/Poison</td>
-	<td><a href="http://pokemon.wikia.com/wiki/Ivysaur ">Ivysaur</a></td>
+	<tr>
+		<td> <img width ="50" "src="http://img4.wikia.nocookie.net/__cb20140328190757/pokemon/images/thumb/2/21/001Bulbasaur.png/200px-001Bulbasaur.png"></td>
+		<td> Bulbasaur </td>
+		<td>Grass/Poison</td>
+		<td>
+			<a href="http://pokemon.wikia.com/wiki/Ivysaur ">Ivysaur</a>
+		</td>
+	</tr>
 	
 
-	<tr> <td>
-		<img src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png">
+	<tr>
+	 <td>
+		<img width ="50" "src="http://img4.wikia.nocookie.net/__cb20140724195345/pokemon/images/thumb/7/73/004Charmander.png/200px-004Charmander.png">
 	</td>
 	<td>Charmander</td>
 	<td>Fire</td>
@@ -24,7 +38,7 @@
 
 	<tr>
 		<td>
-			<img src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png">
+			<img width ="50" "src="http://img1.wikia.nocookie.net/__cb20140328191525/pokemon/images/thumb/3/39/007Squirtle.png/200px-007Squirtle.png">
 		</td>
 		<td>Squirtle</td>
 		<td>Water</td>
@@ -33,6 +47,9 @@
 		</td>
 
 	</tr>
-
 </tbody>
-</table>	
+
+
+</body>
+</html>
+	
